# internal/dto/wordgroup.go
@@ -3,11 +3,14 @@ package dto
 type WordGroup struct {
 	ID          string      `json:"id"`
 	Name        string      `json:"name"`
-	LangBinding LangBinding `json:"lang_binding"`
+	UserUID     string      `json:"-" swaggerignore:"true,required"`
+	LangBinding LangBinding `json:"lang_binding" validate:"required,dive,required"`
+	Default     bool        `json:"default"`
 }
 
 type WordGroupCreate struct {
 	Name        string      `json:"name"`
-	UserUID     string      `json:"-" swaggerignore:"true"`
-	LangBinding LangBinding `json:"lang_binding"`
+	UserUID     string      `json:"-" swaggerignore:"true,required"`
+	LangBinding LangBinding `json:"lang_binding" validate:"required,dive,required"`
+	Default     bool        `json:"-" swaggerignore:"true"`
 }
